# bc-version-control-assignment

./: Makefile  README.md  pyproject.toml
bc_version_control_assignment/: __init__.py  dataset.py  features.py  plots.py
bc_version_control_assignment/modeling/: predict.py  train.py
docs/: reflection.txt  todo.txt
notebooks/: step9_analysis.ipynb
