[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bc_version_control_assignment"
version = "0.0.1"
description = "Version control workflow assignment using the Cookiecutter Data Science template."
authors = [
  { name = "Adam Khan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["bc_version_control_assignment"]
include = ["pyproject.toml", "bc_version_control_assignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bc_version_control_assignment"]
force-sort-within-sections = true

